--- a/tallerdoom/punto1.css
+++ b/tallerdoom/punto1.css
@@ -1,57 +1,89 @@
 body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-   
-    .navbar {
-      overflow: hidden;
-      background-color: #333;  
-      position: fixed;
-      top: 0;
-      width: 100%;
-    }
-   
-    .navbar a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-   
-    .navbar a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-   
-    .navbar a.active {
-      background-color: #04AA6D;
-      color: white;
-    }
-   
-    .navbar .icon {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;  
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.navbar .icon {
+  display: none;
+}
+
+h2, p {
+  margin-top: 70px;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child) {
       display: none;
-    }
-   
-    @media screen and (max-width: 600px) {
-      .navbar a:not(:first-child) {display: none;}
-      .navbar a.icon {
-        float: right;
-        display: block;
-      }
-    }
-   
-    @media screen and (max-width: 600px) {
-      .navbar.responsive .icon {
-        position: absolute;
-        right: 0;
-        bottom:0;
-      }
-      .navbar.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
+  }
+  .navbar a.icon {
+      float: right;
+      display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar.responsive .icon {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+  }
+  .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+  }
+}
+.return-home-button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  margin: 0 auto; /* Centra el botón horizontalmente */
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+  font-family: Arial, Helvetica, sans-serif; /* Cambia la fuente del texto */
+  font-weight: bold; /* Hace que el texto sea más grueso */
+}
+
+.return-home-button:hover {
+  background-color: #333;
+}
+
+.return-home-button a {
+  color: white;
+  text-decoration: none; /* Elimina la subrayado del texto */
 }
