--- a/tallerdoom/punto3.css
+++ b/tallerdoom/punto3.css
@@ -59,3 +59,29 @@ body {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
   }
+
+  .return-home-button {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    margin: 0 auto; /* Centra el botón horizontalmente */
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    font-family: Arial, Helvetica, sans-serif; /* Cambia la fuente del texto */
+    font-weight: bold; /* Hace que el texto sea más grueso */
+  }
+  
+  .return-home-button:hover {
+    background-color: #333;
+  }
+  
+  .return-home-button a {
+    color: white;
+    text-decoration: none; /* Elimina la subrayado del texto */
+  }
